@@ -3,7 +3,7 @@ gui/sandbox
 
 .. dfhack-tool::
     :summary: Create units, trees, or items.
-    :tags: fort armok animals items map plants units
+    :tags: adventure fort armok animals items map plants units
 
 This tool provides a spawning interface for units, trees, and/or items. Units
 can be created with arbitrary skillsets, and trees can be created either as
@@ -28,3 +28,10 @@ Usage
 ::
 
     gui/sandbox
+
+Caveats
+-------
+
+If running from adventure mode, the map will show fort-mode "dig" markers on
+tiles that were within the code of vision of your adventurers. This is visually
+distracting, but it is not an error and can be ignored.
